# SquireBot

./: .env  .gitignore  .gitkeep  .gitlab-ci.yml  AdminCommands.md  Cargo.toml  JudgeCommands.md  README.md  SquireBotSetup.md  TODO.md  UserCommands.md  \  adminCommands.py  baseBot.py  error.txt  guild.tar.bz2  judgeCommands.py  pairingsBot.py  playerCommands.py  prototypeBot.py  rusty-tags.vi  squireBot.py  squireLog  standings.txt  testLoadPlayer.py  testTournamentLoader.py  tester.xml  testingBot.py  tier1.tar.bz2  tmp  tricebot.py  userCommands.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Tournament/: \  __init__.py  cardDB.py  cardDBTest.py  commandResponce.py  commandResponse.py  deck.py  exceptions.py  fluidRoundTournament.py  guildSettings.py  match.py  matchRegistry.py  pairingQueue.py  pairingSystem.py  player.py  playerRegistry.py  queue.py  scoringSytem.py  swissSystem.py  swissTournament.py  tournament.py  tournamentSelector.py  tournamentUtils.py  tricebot.py  utils.py
docs/: AdminCommands.md  Command Sequence Diagram  CrashCourse.md  JudgeCommands.md  SquireBot Architecture Diagram  UserCommands.md
guilds/702976135301955649/: settings.xml
guilds/784942835241582642/: settings.xml
guilds/854503383149969458/: settings.xml
scripts/: deckTester.py  marchesaCardPercentage.py  matchmakingTestData.xml  messagingSim.py  playerDataToCSV.py  probabilisticSim.py  queueActivity.txt  standings.py  tmp.py  tournDataToCSV.py
src/: env.rs  logging.rs  main.rs  match_manager.rs
src/admin_commands/: group.rs  mod.rs  setup.rs
src/misc_commands/: :w  bug.rs  confirm.rs  docs.rs  dump.rs  feature.rs  flip_coins.rs  group.rs  misfortune.rs  mod.rs  save.rs
src/model/: confirmation.rs  consts.rs  containers.rs  guild_rounds.rs  guild_settings.rs  guild_tournament.rs  guild_tournaments.rs  lookup_error.rs  misfortune.rs  mod.rs  squire_tournament.rs  timer_warnings.rs  tourn_settings_tree.rs  tournament_container.rs
src/model/confirmations/: confirmation.rs  confirmation_map.rs  mod.rs
src/model/guilds/: guild_rounds.rs  guild_settings.rs  guild_tournament.rs  mod.rs
src/models/: guild_settings.rs  guild_tournaments.rs  mod.rs
src/setup_commands/: defaults_commands.rs  group.rs  mod.rs  setup.rs
src/tournament_commands/: admin.rs  admin_commands.rs  group.rs  mod.rs  player_commands.rs  settings_commands.rs  tournament.rs
src/tournament_commands/admin_commands/: add_deck.rs  admin.rs  confirm_result.rs  create_match.rs  cut.rs  decklist.rs  drop.rs  end.rs  freeze.rs  give_bye.rs  match_result.rs  match_status.rs  mod.rs  pair.rs  players.rs  profile.rs  prune.rs  raw_standings.rs  register.rs  registration.rs  remove_deck.rs  remove_match.rs  standings.rs  start.rs  status.rs  time_extension.rs
src/tournament_commands/confirmations/: cut.rs  end.rs  prune.rs
src/tournament_commands/player_commands/: add_deck.rs  common_command.rs  confirm_result.rs  decklist.rs  decks.rs  drop.rs  list.rs  match_result.rs  mod.rs  name.rs  ready.rs  register.rs  remove_deck.rs  standings.rs
src/utils/: card_collection.rs  containers.rs  default_response.rs  embeds.rs  error_to_reply.rs  extract_id.rs  id_resolver.rs  is_configured.rs  lib_sync.rs  mod.rs  sort_deck.rs  spin_lock.rs  stringify.rs  tourn_resolver.rs  user_to_tourn.rs
tests/: .gitignore  30xQueueTimes.txt  README.md  cardDBTest.py  createTournament.txt  deckTest.py  fluidRoundTest.py  matchReferenceTest.py  matchXMLTests.py  probabilisticSim.py  queueActivity.txt  queueTest.py  queue_repair.py  runTests.sh  scrapTest.xml  test.py  testDeck.txt  testRunner.py  testerBot.py  tournamentSim.py  tournamentTest.py  utilsTest.py
tests/test-data-decks/: 0eqnl8hg  0i90htmu  0klo1bq3  0sbns7o2  1cn8cka7  1qkpjcqm  1t23jfb1  2iarod48  2pglb5ab  398e9bes  3f68jqbe  3g3do67j  41idmi68  4qgvfgug  4r4bmeoe  4t1mto54  5vhe8io4  64g5uukg  6ar9065f  6f2gntt4  6ge0uf8j  6gpereqj  75mup0om  764l7g0d  76rm5mpf  7cnu1rck  7f4ckcl0  7l7fi5v5  7q46ljep  7t08nc1u  7us8oskp  7v5csg1i  813mm29r  8md5gf4v  8ng6g8ie  8sqmqdt0  9m8fklbp  a2qa2is1  afbfvjjt  aumip5jc  (+83 more)
tests/tester/: overview.xml
tests/tester/matches/: match_1.xml  match_10.xml  match_100.xml  match_101.xml  match_102.xml  match_103.xml  match_104.xml  match_105.xml  match_106.xml  match_107.xml  (+113 more)
tests/unit-tests/: Test Player.xml  player-tests.py  test-deck-five.txt  test-deck-four.txt  test-deck-one.txt  test-deck-six.txt  test-deck-three.txt
tournament/: __init__.py  deck.py  match.py  matchTester.xml  player.py  tournament.py  tournamentUtils.py
(+292 files in other folders)
