[package]
name = "squire_bot"
version = "0.1.0-pre-alpha.1"
edition = "2021"
license = "GPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[features]
default = ["deck_sites"]
deck_sites = ["mtgjson/deck_sites"]

[dependencies]
# "In-house" deps
#mtgjson = { git = "https://github.com/TylerBloom/mtgjson-rust-sdk" }
#mtgjson = { path = "../mtgjson-rust-sdk", features = ["deck_sites"] }
mtgjson = { git = "https://github.com/TylerBloom/mtgjson-rust-sdk", rev="864d71022fd285defb371626e06d6de7c7119f45", default-features = false }
#squire_lib = { git = "https://github.com/MonarchDevelopment/SquireCore.git", branch = "main" }
squire_lib = { path = "../SquireCore/squire_lib" }
cycle_map = { version = "0.1.1", features = ["serde"] }

serenity = { version = "0.11.2", features = ["framework", "standard_framework", "rustls_backend", "client", "gateway", "rustls_backend", "model", "utils"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = { version = "0.10.0" }
reqwest = { version = "0.11.10", features = ["json"] }
lazy_static = { version = "1.4.0" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.9" }
serde = { version = "1.0" }
rayon = { version = "1.0" }
serde_json = { version = "1.0.68" }
dashmap = { version = "5.0", features = ["serde", "rayon"] }
rand = { version = "0.8" }
tempfile = { version = "3.3.0" }
uuid = { version = "1.1", features = ["serde", "v4"] }
once_cell = { version = "1.8.0" }
#mongodb = { version = "2.3.1" }
#futures = { version = "0.3" }
